# suitime

./: .gitignore  .mcp.json  BUILD.md  BUILD_IOS.md  README.md  build.ps1  cloud_sync.py  constants.py  database.py  main.py  pyproject.toml  requirements.txt  reset_db.py  security.py  sync_helpers.py  tiempo.py  validators.py
.github/workflows/: build-ios.yml
mcp_suitime/: README.md  __init__.py  server.py
